# Dshield

./: .compliance_id  .gitignore  .pool_ids  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PR.md  README.md  SECURITY.md  justfile
contracts/compliance/: Cargo.toml
contracts/compliance/src/: lib.rs
contracts/compliance/test_snapshots/tests/: test_many_kyc_registrations_isolation.1.json  test_multiple_kyc_registrations.1.json  test_register_kyc_idempotent.1.json  test_register_kyc_max_hash.1.json  test_register_kyc_zero_hash.1.json  test_set_disclosure_vk_requires_admin.1.json  test_set_disclosure_vk_stores_vk.1.json  test_set_pools_requires_admin.1.json  test_set_pools_updates_configured_pools.1.json  test_verify_compliance_amount_mismatch_rejected.1.json  test_verify_compliance_bad_public_inputs_length.1.json  test_verify_compliance_empty_proof.1.json  test_verify_compliance_kyc_hash_extraction_exact_position.1.json  test_verify_compliance_kyc_hash_one_bit_off_rejected.1.json  test_verify_compliance_unknown_root_rejected.1.json  test_verify_compliance_wrong_proof_length.1.json  test_verify_disclosure_kyc_not_registered.1.json  test_verify_disclosure_threshold_exceeds_amount_rejected.1.json  test_verify_disclosure_vk_not_set.1.json  test_verify_disclosure_wrong_proof_length.1.json
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/pool/test_snapshots/tests/: test_commitment_read_from_persistent_storage.1.json  test_current_root_accepted_for_withdraw.1.json  test_deposit_accumulates_pool_balance.1.json  test_deposit_batch_amount_overflow_rejected.1.json  test_deposit_batch_empty_rejected.1.json  test_deposit_batch_matches_sequential_deposits.1.json  test_deposit_batch_matches_sequential_deposits.2.json  test_deposit_batch_rejects_duplicate_in_batch.1.json  test_deposit_increments_index.1.json  test_deposit_requires_auth.1.json  test_deposit_returns_correct_index.1.json  test_deposit_sequential_indices.1.json  test_deposit_sets_root.1.json  test_deposit_transfers_tokens.1.json  test_duplicate_commitment_fails.1.json  test_get_commitment_by_index.1.json  test_get_commitments_returns_all_in_order.1.json  test_initial_state_no_root.1.json  test_is_known_root_false_for_unknown_root.1.json  test_max_value_commitment_valid.1.json  test_multiple_depositors_independent.1.json  test_multiple_deposits_different_roots.1.json  test_multiple_distinct_nullifiers_independent.1.json  test_nullifier_read_from_persistent_storage.1.json  test_nullifier_unused_by_default.1.json  test_reconstructed_root_matches_onchain_root.1.json  test_reconstructed_root_matches_onchain_root_8.1.json  test_root_changes_each_deposit.1.json  test_root_history_accepts_old_root.1.json  test_same_commitment_different_depositors_fails.1.json  test_same_commitment_sequence_produces_deterministic_root.1.json  test_same_commitment_sequence_produces_deterministic_root.2.json  test_withdraw_bad_public_inputs_length.1.json  test_withdraw_contract_recipient_unsupported.1.json  test_withdraw_no_root_fails.1.json  test_withdraw_recipient_mismatch_rejected.1.json  test_withdraw_root_mismatch.1.json  (+2 more)
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
(+96 files in other folders)
