[workspace]
resolver = "2"
members = [
    "contracts/verifier",
    "contracts/pool",
    "contracts/compliance",
]

[workspace.dependencies]
soroban-sdk = { version = "26.0.1", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true
