[package]
name = "dshield-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-poseidon = "26.0.0"
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/rs-soroban-ultrahonk", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
soroban-env-host = "26.1.3"
