[package]
name = "dshield-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# hazmat-address: used to derive a deterministic recipient identifier from the
# payout Address so the withdrawal proof can be bound to its recipient (NOT for
# signature auth). See `recipient_hash_from_address` in src/lib.rs.
soroban-sdk = { workspace = true, features = ["alloc", "hazmat-address"] }
soroban-poseidon = "26.0.0"
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/rs-soroban-ultrahonk", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc", "hazmat-address"] }
soroban-env-host = "26.1.3"
